<resources>
    <string name="app_name">ECommerce</string>
    <string name="product_description">Nice product description example</string>
    <string name="goods_brand">goods_brand_example</string>
    <string name="goods_price">Price: </string>
    <string name="goods_stars">goods_stars_example</string>
    <string name="goods_reviews">Reviews: </string>
    <string name="goods_textview_brand">Brand:</string>
    <string name="samsung_example">Samsung</string>
    <string name="price_100_usd_example">$100 USD</string>
    <string name="search">Search</string>
    <string name="results">Results</string>
    <string name="by">by</string>
    <string name="get_it_by">Get it by</string>
    <string name="get_it_monday">Monday, Jun 5</string>
    <string name="free_shipping">FREE Shipping on eligible orders</string>
    <string name="free_shipping_short">FREE Shipping</string>
    <string name="see_more_choices">See more choices</string>
    <string name="ship_to">Ship to:</string>
    <string name="buy_now">Buy Now!</string>
    <string name="size">Size</string>
    <string name="_32_gb">32 Gb</string>
    <string name="_5_colors">5 Colors:</string>
    <string name="select_a_shipping_address">Select a shipping address:</string>
    <string name="qty_1">Qty: 1</string>
    <string name="black">Black</string>
    <string name="in_stock">In Stock.</string>
    <string name="price">Price:</string>
    <string name="thank_you">Thank you,</string>
    <string name="we_are_sending_thee_purchase_to_you">We are sending thee purchase to you</string>
    <string name="back_to_search">Back to search</string>
    <string name="giftset">GiftSet</string>
    <string name="available">Available</string>
    <string name="phone">Phones</string>
    <string name="please_change_permissions">Please change permissions in App Settings!</string>
    <string name="rate_the_product">Rate the product</string>
    <string name="ok">OK</string>
    <string name="publisher_loopme_token">my-private@looMe?token</string>
</resources>
